swager add
